Fix table columns alignment for numerals and dates (#1263)
* Fix table columns alignment for numerals and dates

Closes #1220

I have added the css for sligning table columns with numeral to the
right and table columns with date to the center

* Update fix table columns assignment

Add updated CSS for numerals and dates in the tables across the views

Resolves #1220

* Fix the leftout views' table for proper indent

* Fix typo in donations index and fix order in purchases row

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -42,3 +42,11 @@
   }
   thead {background: $light-grey}
 }
+
+table .numeric {
+  text-align: right;
+}
+
+table .date {
+  text-align: center;
+}
